--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ button {
   font-size: 1em;
   font-weight: bold;
   background-color: var(--primary);
-  color: var(--background-primary);
+  color: var(--text);
   transition: all 0.3s;
 }
 
